--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,16 +20,32 @@ file(GLOB_RECURSE HEADER_FILES
 	${CMAKE_SOURCE_DIR}/include/*.hpp
 )
 
+# TODO: Put the imgui stuff into some sort of wrapper (like imgui-cmake), rather than directly adding it to src.
+file(GLOB IMGUI_SRCFILES ${CMAKE_SOURCE_DIR}/dependencies/imgui/*.cpp)
+
+file(GLOB IMGUI_HEADER_FILES
+	${CMAKE_SOURCE_DIR}/dependencies/imgui/*.h
+)
+
+set(IMGUI_IMPL
+	${CMAKE_SOURCE_DIR}/dependencies/imgui/examples/imgui_impl_glfw.h
+	${CMAKE_SOURCE_DIR}/dependencies/imgui/examples/imgui_impl_glfw.cpp
+	${CMAKE_SOURCE_DIR}/dependencies/imgui/examples/imgui_impl_opengl3.cpp
+	${CMAKE_SOURCE_DIR}/dependencies/imgui/examples/imgui_impl_opengl3.h
+)
+
 include_directories(
 	"${CMAKE_SOURCE_DIR}/src"
 	"${CMAKE_SOURCE_DIR}/include"
+	"${CMAKE_SOURCE_DIR}/dependencies/imgui/"
+	"${CMAKE_SOURCE_DIR}/dependencies/imgui/examples/"
 )
 
-add_executable(main ${SRCFILES} ${HEADER_FILES})
+add_executable(main ${SRCFILES} ${HEADER_FILES} ${IMGUI_SRCFILES} ${IMGUI_HEADER_FILES} ${IMGUI_IMPL})
 
 
 # Dependencies
-# TODO: a CMakeLists.txt for /dependencies? It would make this part a lot less ugly
+# TODO: a CMakeLists.txt for /dependencies? It would make this part a lot less ugly, but it would be very unecessary.
 # OpenGL
 find_package(OpenGL REQUIRED)
 if(WIN32)
@@ -44,6 +60,8 @@ endif()
 add_subdirectory(dependencies/glad-3.3/)
 target_link_libraries(main glad)
 
+
+# GLFW
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE) # These prevent GLFW from building unecessary stuff
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
