--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 	url = https://github.com/ocornut/imgui.git
 [submodule "dependencies/imgui/"]
 	branch = docking
+[submodule "dependencies/stb"]
+	path = dependencies/stb
+	url = https://github.com/nothings/stb.git
