--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "dependencies/stb"]
 	path = dependencies/stb
 	url = https://github.com/nothings/stb.git
+[submodule "dependencies/tinyfiledialogs"]
+	path = dependencies/tinyfiledialogs
+	url = https://github.com/native-toolkit/tinyfiledialogs.git
